// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Changelog renders changelog results correctly 1`] = `
<div>
  <div
    class="results-count"
  >
    x-results
  </div>
  <table
    class="table changelog-table table-autofit table-list"
    role="table"
  >
    <thead>
      <tr>
        <th
          class="lfr-summary-column table-cell-content"
        >
          summary
        </th>
        <th
          class="lfr-component-column"
        >
          component
        </th>
        <th
          class="lfr-release-column"
        >
          release
           
          <svg
            class="desc lexicon-icon sorting-indicator"
            role="button"
          >
            <use
              xlink:href="#arrow-up"
            />
          </svg>
        </th>
        <th
          class="lfr-key-column"
        >
          key
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="journal-article-row"
        id="LPS-90100GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          IE11 Web Image Resizing Does not Maintain Initial Aspect Ratio
        </td>
        <td
          class="lfr-component-column"
        >
          Frontend Infrastructure &gt; WYSIWYG
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            LPS-90100
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="LPS-85155GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          Add menu - Heading order invalid
        </td>
        <td
          class="lfr-component-column"
        >
          Accessibility
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            LPS-85155
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Changelog renders changelog with pagination when results exceed 50 items 1`] = `
<div>
  <div
    class="results-count"
  >
    x-results
  </div>
  <table
    class="table changelog-table table-autofit table-list"
    role="table"
  >
    <thead>
      <tr>
        <th
          class="lfr-summary-column table-cell-content"
        >
          summary
        </th>
        <th
          class="lfr-component-column"
        >
          component
        </th>
        <th
          class="lfr-release-column"
        >
          release
           
          <svg
            class="desc lexicon-icon sorting-indicator"
            role="button"
          >
            <use
              xlink:href="#arrow-up"
            />
          </svg>
        </th>
        <th
          class="lfr-key-column"
        >
          key
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="journal-article-row"
        id="0GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 0
        </td>
        <td
          class="lfr-component-column"
        >
          component 0
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            0
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="1GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 1
        </td>
        <td
          class="lfr-component-column"
        >
          component 1
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            1
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="2GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 2
        </td>
        <td
          class="lfr-component-column"
        >
          component 2
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            2
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="3GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 3
        </td>
        <td
          class="lfr-component-column"
        >
          component 3
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            3
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="4GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 4
        </td>
        <td
          class="lfr-component-column"
        >
          component 4
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            4
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="5GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 5
        </td>
        <td
          class="lfr-component-column"
        >
          component 5
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            5
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="6GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 6
        </td>
        <td
          class="lfr-component-column"
        >
          component 6
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            6
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="7GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 7
        </td>
        <td
          class="lfr-component-column"
        >
          component 7
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            7
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="8GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 8
        </td>
        <td
          class="lfr-component-column"
        >
          component 8
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            8
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="9GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 9
        </td>
        <td
          class="lfr-component-column"
        >
          component 9
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            9
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="10GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 10
        </td>
        <td
          class="lfr-component-column"
        >
          component 10
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            10
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="11GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 11
        </td>
        <td
          class="lfr-component-column"
        >
          component 11
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            11
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="12GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 12
        </td>
        <td
          class="lfr-component-column"
        >
          component 12
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            12
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="13GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 13
        </td>
        <td
          class="lfr-component-column"
        >
          component 13
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            13
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="14GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 14
        </td>
        <td
          class="lfr-component-column"
        >
          component 14
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            14
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="15GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 15
        </td>
        <td
          class="lfr-component-column"
        >
          component 15
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            15
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="16GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 16
        </td>
        <td
          class="lfr-component-column"
        >
          component 16
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            16
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="17GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 17
        </td>
        <td
          class="lfr-component-column"
        >
          component 17
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            17
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="18GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 18
        </td>
        <td
          class="lfr-component-column"
        >
          component 18
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            18
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="19GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 19
        </td>
        <td
          class="lfr-component-column"
        >
          component 19
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            19
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="20GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 20
        </td>
        <td
          class="lfr-component-column"
        >
          component 20
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            20
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="21GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 21
        </td>
        <td
          class="lfr-component-column"
        >
          component 21
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            21
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="22GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 22
        </td>
        <td
          class="lfr-component-column"
        >
          component 22
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            22
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="23GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 23
        </td>
        <td
          class="lfr-component-column"
        >
          component 23
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            23
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="24GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 24
        </td>
        <td
          class="lfr-component-column"
        >
          component 24
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            24
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="25GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 25
        </td>
        <td
          class="lfr-component-column"
        >
          component 25
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            25
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="26GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 26
        </td>
        <td
          class="lfr-component-column"
        >
          component 26
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            26
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="27GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 27
        </td>
        <td
          class="lfr-component-column"
        >
          component 27
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            27
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="28GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 28
        </td>
        <td
          class="lfr-component-column"
        >
          component 28
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            28
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="29GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 29
        </td>
        <td
          class="lfr-component-column"
        >
          component 29
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            29
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="30GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 30
        </td>
        <td
          class="lfr-component-column"
        >
          component 30
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            30
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="31GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 31
        </td>
        <td
          class="lfr-component-column"
        >
          component 31
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            31
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="32GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 32
        </td>
        <td
          class="lfr-component-column"
        >
          component 32
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            32
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="33GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 33
        </td>
        <td
          class="lfr-component-column"
        >
          component 33
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            33
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="34GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 34
        </td>
        <td
          class="lfr-component-column"
        >
          component 34
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            34
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="35GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 35
        </td>
        <td
          class="lfr-component-column"
        >
          component 35
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            35
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="36GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 36
        </td>
        <td
          class="lfr-component-column"
        >
          component 36
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            36
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="37GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 37
        </td>
        <td
          class="lfr-component-column"
        >
          component 37
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            37
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="38GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 38
        </td>
        <td
          class="lfr-component-column"
        >
          component 38
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            38
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="39GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 39
        </td>
        <td
          class="lfr-component-column"
        >
          component 39
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            39
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="40GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 40
        </td>
        <td
          class="lfr-component-column"
        >
          component 40
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            40
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="41GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 41
        </td>
        <td
          class="lfr-component-column"
        >
          component 41
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            41
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="42GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 42
        </td>
        <td
          class="lfr-component-column"
        >
          component 42
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            42
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="43GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 43
        </td>
        <td
          class="lfr-component-column"
        >
          component 43
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            43
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="44GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 44
        </td>
        <td
          class="lfr-component-column"
        >
          component 44
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            44
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="45GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 45
        </td>
        <td
          class="lfr-component-column"
        >
          component 45
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            45
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="46GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 46
        </td>
        <td
          class="lfr-component-column"
        >
          component 46
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            46
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="47GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 47
        </td>
        <td
          class="lfr-component-column"
        >
          component 47
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            47
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="48GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 48
        </td>
        <td
          class="lfr-component-column"
        >
          component 48
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            48
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="49GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 49
        </td>
        <td
          class="lfr-component-column"
        >
          component 49
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            49
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="50GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          summary 50
        </td>
        <td
          class="lfr-component-column"
        >
          component 50
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            50
          </a>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    aria-label="pagination navigation"
    class="pagination"
    role="navigation"
  >
    <ul>
      <li
        class="pagination-current"
      >
        <span
          aria-current="true"
          aria-label="current page, page 1"
        >
          1
        </span>
      </li>
      <li
        class=""
      >
        <button
          aria-label="go to page 2"
          class="btn-unstyled"
          type="button"
          value="2"
        >
          2
        </button>
      </li>
      <li
        class=""
      >
        <button
          aria-label="go to page ›"
          class="btn-unstyled"
          type="button"
          value="2"
        >
          ›
        </button>
      </li>
      <li
        class=""
      >
        <button
          aria-label="go to page »"
          class="btn-unstyled"
          type="button"
          value="2"
        >
          »
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Changelog renders no results correctly 1`] = `
<div>
  <div
    class="results-count"
  >
    x-results
  </div>
  <table
    class="table changelog-table table-autofit table-list"
    role="table"
  >
    <thead>
      <tr>
        <th
          class="lfr-summary-column table-cell-content"
        >
          summary
        </th>
        <th
          class="lfr-component-column"
        >
          component
        </th>
        <th
          class="lfr-release-column"
        >
          release
           
          <svg
            class="desc lexicon-icon sorting-indicator"
            role="button"
          >
            <use
              xlink:href="#arrow-up"
            />
          </svg>
        </th>
        <th
          class="lfr-key-column"
        >
          key
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <div
    class="no-results"
  >
    no-results-found-to-match-your-selection
    <h5
      class="secondary-text-color"
    >
      try-modifying-your-criteria
    </h5>
  </div>
</div>
`;
